--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -123,10 +123,12 @@
     else,%
     esac,%
     exit,%
+    export,%
     expr,%
     fi,%
     for,%
     if,%
+    in,%
     local,%
     return,%
     test,%
