doc: fuse the tutorial and the specs into a single document.
	Move the body of the specs and the tutorial is input'able files.
	* doc/specs/urbi-specs.tex: Move body into...
	* doc/specs/specs.tex: this new file.
	* doc/tutorial/urbi-tutorial.tex: Move body into...
	* doc/tutorial/tutorial.tex: this new file.

	* doc/tutorial/local.mk, doc/specs/local.mk: No longer compile the
	tutortial and the specs by default.
	* doc/urbi-sdk.tex: New.
	* doc/Makefile.am: Compile it.

	* doc/specs/list.tex, doc/specs/stdlib.tex: Formatting changes.
	Qualify the path in the \inputs.

--- a/doc/specs/list.tex
+++ b/doc/specs/list.tex
@@ -1,8 +1,8 @@
 \section{List}
 \subsection{Rationale}
 
-\lstinline|List|s in \us represent potentially empty collections of
-elements.
+\lstinline|List|s in \us represent potentially empty ordered
+collections of elements.
 
 \subsection{Prototypes}
 
@@ -151,7 +151,8 @@ predicate (\autoref{lst:list-filter}).
 
 \subsubsection{foldl}
 
-FIXME: this is too damn hard to explain, yet so simple
+\fixme{This is too damn hard to explain, yet so simple.}
+
 (\autoref{lst:list-foldl}).
 
 \begin{urbiscript}[caption=List.foldl, label=lst:list-foldl]
