--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -8,7 +8,6 @@
 
 % CONFIGURATION
 \title{The Urbi Software Development Kit}
-\subtitle{The Tutorial}
 \author{Kernel Team}
 
 % DOCUMENT
@@ -16,7 +15,12 @@
 
 \maketitle
 \tableofcontents
-\input{tutorial}
+
+\part{Urbi SDK Tutorial}
+\input{tutorial/tutorial}
+
+\part{Urbi SDK Specifications}
+\input{specs/specs}
 
 \part{References and Index}
 
