--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -19,7 +19,7 @@
 \section{Dictionary}
 \section{Event}
 
-\input{float.tex}
+\input{specs/float}
 
 \section{Group}
 
@@ -119,7 +119,7 @@ Evaluating a lazy several times only makes sense with lazy arguments
 and call messages. See example with call messages in
 \autoref{sec:std-callmsg-examples-several}.
 
-\input{list.tex}
+\input{specs/list}
 
 \section{Lobby}
 \section{Object}
