--- a/doc/urbi-sdk.tex
+++ b/doc/urbi-sdk.tex
@@ -19,6 +19,14 @@
 \part{Urbi SDK Tutorial}
 \input{tutorial/tutorial}
 
+
+\part{Installation}
+\input{installation}
+
+\part{Guidelines and Cook Books}
+\input{faq}
+\input{k1-to-k2}
+
 \part{Urbi SDK Specifications}
 \input{specs/specs}
 
