--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -468,13 +468,13 @@ programming yet, these points will be presented in
 \autoref{section:objective}.
 
 \section{Objects in \urbi}
-
-An object in \urbi is a rather simple concept: a list of slots. Slots
-are a value associated to a name. So an object is a list of slot
+\label{sec:tut:objects}
+An object in \urbi is a rather simple concept: a list of slots. A \dfn{slot}
+is a value associated to a name. So an \dfn{object} is a list of slot
 names, each of which indexes a value --- just like a dictionary. You
-can get an object's slot value by using the dot (\texttt{.}) operator
+can get an object's slot value by using the dot (\lstinline{.}) operator
 on this object, followed by the name of the slot. You can list the
-names of the slots of an object with the \texttt{slotNames}
+names of the slots of an object with the \lstinline{slotNames}
 method. \autoref{lst:object-slots} makes this very clear: we dissect an object
 to point out its structure.
 
@@ -515,9 +515,9 @@ As you can see, we obtain an empty fresh object. Note that it still
 inherits from \texttt{Object} features that all objects share, such as
 the \texttt{slotNames} method.
 
-Also note how o is printed out: \texttt{Object\_}, followed by an
+Also note how \lstinline{o} is printed out: \lstinline{Object\_}, followed by an
 hexadecimal number. Since this object is empty, its printing is quite
-generic: its type (\texttt{Object}), and its unique identifier (every
+generic: its type (\lstinline{Object}), and its unique identifier (every
 \urbi object has one). Since these identifiers are often irrelevant
 and might differ between two executions, they are often filled with
 zeroes in this document.
@@ -539,7 +539,7 @@ o.a;
 \end{urbiscript}
 
 Here we successfully created our first slot, a. A good shorthand for
-setting slot is using the \texttt{var} keyword (\autoref{lst:setslot-var}).
+setting slot is using the \lstinline{var} keyword (\autoref{lst:setslot-var}).
 
 \begin{urbiscript}[caption=Defining slots with var,
   label=lst:setslot-var, name=object-slots]
@@ -644,8 +644,8 @@ o.c = 1;
 [00000000] 1
 \end{urbiscript}
 
-Finally, we may want to remove a slot from an object. This can be done
-with a method whose name I let you guess (\autoref{lst:removeslot}).
+Finally, use \lstinline{removeslot} to delete a slot from an object
+(\autoref{lst:removeslot}).
 
 \begin{urbiscript}[caption=Removing a slot, label=lst:removeslot,
   name=object-slots]
@@ -1577,7 +1577,7 @@ and provides you with a \lstinline|do (MyPair)| scope. It actually also
 predefines a few slots, but this is not the point here.
 
 \section{Constructors}
-
+\label{sec:tut:ctor}
 As we've seen, we can use the clone method on any object to obtain an
 identical object. Yet, some class provide more elaborated
 constructors, accessible by calling \texttt{new} instead of
@@ -2249,388 +2249,3 @@ myEvent! ~ 350ms;
 %\section{Printing}
 
 %\chapter{Binding with \Cxx - UObjects}
-
-\chapter{Frequently Asked Questions}
-\label{sec:faq}
-
-\section{Objects, slots and variables}
-
-\paragraph{How do I create a new Object derivative?}
-Urbi is based on prototypes. To create a new Object derivative (which
-will inherit all the Object methods), you can do:
-
-\begin{urbifixme}
-var myObject = Object.new;
-\end{urbifixme}
-
-\paragraph{How do I add a new slot in an object?}
-To add a slot to an object \code{O}, you have to use the \code{var} keyword:
-
-\begin{urbifixme}
-var O.mySlot = 42;
-\end{urbifixme}
-
-\noindent
-or you can use the "setSlot" method:
-
-\begin{urbifixme}
-O.setSlot("mySlot", 42);
-\end{urbifixme}
-
-Note that in a method, \code{this} designates the current object. For example,
-
-\begin{urbifixme}
-var this.mySlot = 42;
-\end{urbifixme}
-
-\noindent
-will create a new slot in the current object while
-
-\begin{urbifixme}
-var mySlot = 42;
-\end{urbifixme}
-
-\noindent
-will create a local variable, which will not be known anymore after we
-exist the current scope.
-
-\paragraph{How do I modify a slot of my object?}
-\begin{urbifixme}
-O.mySlot = 51;
-\end{urbifixme}
-
-\noindent
-or
-
-\begin{urbifixme}
-O.updateSlot("mySlot", 51);
-\end{urbifixme}
-
-\paragraph{How do I create or modify a local variable?}
-\begin{urbifixme}
-var myLocalVariable;
-myLocalVariable = "foo";
-\end{urbifixme}
-
-\noindent
-or
-
-\begin{urbifixme}
-var myLocalVariable = "foo";
-\end{urbifixme}
-
-
-\paragraph{How do I make a constructor?}
-You can define a method called \code{init} which will be called
-automatically by \code{new}. For example:
-
-\begin{urbifixme}
-class myObject {
-  function init(x, y) {
-    var this.x = x;
-    var this.y = y;
-  };
-};
-myInstance = myObject.new(10, 20);
-\end{urbifixme}
-
-
-\paragraph{How can I manipulate the list of prototypes of my objects?}
-The \code{protos} method returns a list (which can be manipulated)
-containing the list of your object prototype.
-
-\begin{urbifixme}
-var myObject = Object.new;
-myObject.protos;
-[00000001] [Object]
-\end{urbifixme}
-
-\paragraph{How can I know the slots available for a given object?}
-The \code{slotNames} and \code{allSlotNames} methods return
-respectively the local slot names and the local+inherited slot names.
-
-\paragraph{How do I create a new function?}
-Functions are first class objects. That means that you can add them as
-any other slot in an object:
-
-\begin{urbifixme}
-var myObject = Object.new;
-var myFunction = function (x, y)
-  { echo ("myFunction called with " + x + " and " + y) };
-\end{urbifixme}
-
-You can also use the following notation to add a function to your
-object:
-
-\begin{urbifixme}
-var myObject = Object.new;
-function myObject.myFunction (x, y) { /* ... */ };
-\end{urbifixme}
-
-or even group definitions within a "do" scope, which will automatically
-define new slots instead of local variables and functions:
-
-\begin{urbifixme}
-var myObject = Object.new;
-do (myObject) {
-  function myFunction (x, y) { /* ... */ };
-};
-\end{urbifixme}
-
-or group those two statements by using a convenient "class" scope:
-
-\begin{urbifixme}
-class myObject {
-  function myFunction (x, y) { /* ... */ };
-};
-\end{urbifixme}
-
-\section{Tags}
-
-\paragraph{How do I create a tag?}
-
-
-Tags are objects, and must be created as any object by using "new" to create
-derivatives of the "Tag" object.
-
-\begin{urbifixme}
-var myTag = Tag.new;
-\end{urbifixme}
-
-or
-
-\begin{urbifixme}
-var myTag = Tag.new("cool name");
-\end{urbifixme}
-
-The name is not mandatory but makes it easier to display a tag and remember
-what it is.
-
-\paragraph{How do I stop a tag?}
-
-
-\begin{urbifixme}
-myTag.stop;
-\end{urbifixme}
-
-\paragraph{Can tagged statements return a value?}
-
-
-By default, tagged statements will return the latest evaluated expression if
-they have not been stopped:
-
-\begin{urbifixme}
-var myTag = Tag.new;
-var res;
-res = { myTag: { do_something; 42 } };
-\end{urbifixme}
-
-After the execution, "res" will contain 42.
-
-However, when a tag is stopped, all the statements tagged with that tag may
-be forced to return a value, by giving it as a parameter to "stop":
-
-\begin{urbifixme}
-var myTag = Tag.new;
-var res;
-{ res = { myTag: sleep(inf) } }, // Sleep forever (infinite amount of time),
-                                 // note the "," to put the tagged statement in
-                                 // the background
-myTag.stop(42);
-res;
-[00000001] 42
-\end{urbifixme}
-
-\section{Events}
-
-\paragraph{How do I create an event?}
-Events are objects, and must be created as any object by using "new" to create
-derivatives of the "Event" object.
-
-\begin{urbifixme}
-var ev = Event.new;
-\end{urbifixme}
-
-\paragraph{How do I emit an event?}
-
-\begin{urbifixme}
-ev!(1, "foo");
-\end{urbifixme}
-
-\paragraph{How do I catch an event?}
-
-\begin{urbifixme}
-at(ev?(1, var msg)) {
-  echo ("Received event with 1 and message " + msg);
-};
-\end{urbifixme}
-
-The \code{?} marker indicates that we are looking for an event instead of a
-boolean condition. The construction "var msg" indicates that the "msg"
-variable will be bound (as a local variable) in the body part of the "at"
-construct, with whatever value is present in the event that triggered the
-"at".
-
-\section{Lists}
-
-\paragraph{How can I iterate over a list?}
-
-You can use the "for" construct to iterate over the elements of a list:
-
-\begin{urbiscript}
-for (var i: [10, 11, 12]) echo (i);
-[00000001] *** 10
-[00000002] *** 11
-[00000003] *** 12
-\end{urbiscript}
-
-\section{UObjects loading}
-
-\paragraph{urbi-launch fails with 'myuobject: file not found'. What can I do?}
-If you are sure the file is there, the most probable cause is an
-undefined symbol in your shared library. A libltdl quirk prevents us
-from displaying a more accurate error message.  You can use a tool
-named \command{ltrace} to obtain the exact error message.  Ltrace is a
-standard package on most Linux distributions.  Run it with
-\samp{ltrace -C -s 1024 urbi-launch ...}, and look for lines
-containing \samp{dlerror} in the output. One will contain the exact
-message that occurred while trying to load your shared library.
-
-Under Mac OS X, the \code{DYLD\_PRINT\_APIS} environment variable can
-be set to 1 to make the shared library loader more verbose and display
-all its attempts to load a file to stderr.
-
-Note that this problem is Mac OS X and Linux specific.
-
-\section{MiscStatus}
-
-\paragraph{How can I know what has changed since the latest beta release I got?}
-
-The file \file{RELEASE-NOTES.txt} at the top of the distribution
-contains the list of user-visible changes between consecutive
-releases.
-
-\paragraph{How do I report a bug?}
-
-See the file \file{REPORTING-BUGS.txt} at the top of the
-distribution. We insist on keeping \email{k2-beta@lists.gostai.com} in
-copy at all times, because it helps us to track conversations with our
-users.
-
-\part{Installation}
-
-\chapter{Installation}
-\label{sec:installation}
-
-\section{Download}
-
-Various precompiled packages are provided.  They are named
-\file{kernel-\var{version}-\var{arch}-\var{os}-\var{compiler}.\var{ext}} where
-\begin{description}
-\item[\var{version}] specifies the exact revision of Urbi that you are
-  using.  It can be simple, \code{2.0}, or more complex,
-  \code{2.0-beta3-137-g28f8880}.  In that case,
-  \begin{description}
-  \item[2.0] is the version of the UrbiScript Kernel,
-  \item[beta3] designates the third prerelease,
-  \item[137] is the number of changes since beta3 (not counting
-    changes in sub-packages),
-  \item[g28f8880] is a version control identifier, used internally to
-    track the exact version that is being tested by our users.
-  \end{description}
-\item[\var{arch}] describes the architecture, the \acronym{cpu}:
-  \code{ARM}, \code{ppc}, or \code{x86}.
-\item[\var{os}] is the operating system: \code{linux} for GNU/Linux,
-  \code{osx} for Mac OS X, or \code{windows} for Microsoft Windows.
-%% FIXME: We do not display the compiler name in the packages.
-\item[\var{compiler}] is the tool chain used to compile the
-  executables: \code{gcc} for the GNU Compiler Collection, \code{vcxx}
-  for Microsoft Visual \Cxx.
-\item[\var{ext}] is the package format extension: \code{tar.gz} for
-  Unix style tar balls (uncompressed with \command{tar zxf
-    \var{tarfile}}), and \code{zip} for Windows style zip files.
-\end{description}
-
-\section{Install}
-
-Uncompress the package where you want to install it.  The package is
-built to be installed as \file{/usr/local/gostai}, but this can be
-changed --- see below.  It might be interesting to keep several
-versions of our packages, in which case using symbolic links (aka
-\emph{aliases}) proves to be handy.  Under Unix, the installation
-sequence should look like:
-
-\begin{shell}
-$ tar zxf kernel-2.0-beta3-linux-x86.tar.gz
-$ sudo mv kernel-2.0-beta3-linux-x86 /usr/local
-$ cd /usr/local
-$ ln -sf kernel-2.0-beta3-linux-x86 gostai
-\end{shell}
-
-The \dfn{root} of the package, denoted by \var{urbi-root} hereafter,
-is the absolute name of the directory which contains the package.  The
-default root is \file{/usr/local/gostai}.  The directory
-\var{urbi-root} should contain \file{bin}, \file{FAQ.txt} and so forth.
-
-If your \var{urbi-root} is not \file{/usr/local/gostai}, you will need
-some adjustments.  Define the environment variable \index{urbi
-  root@\code{URBI\_ROOT}}\emphdfn{\code{URBI\_ROOT}} to point to
-\var{urbi-root}, and adjust the library\footnote{%
-%%
-  Mac OS X users need to extend \code{DYLD\_LIBRARY\_PATH}, not
-  \code{LD\_LIBRARY\_PATH}.
-%%
-} and executable paths.
-
-\begin{shell}[escapeinside=`']
-$ export URBI_ROOT=`\var{urbi\_root}'
-$ export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$URBI_ROOT/lib
-$ export PATH=$PATH:$URBI_ROOT/bin
-\end{shell}%$
-
-\section{Checks}
-
-Running the various programs is the quickest way to test your urbi
-installation.
-
-\begin{shell}
-# Check that urbi-console is properly set up.
-$ urbi-console --version
-# Check that urbi-launch is properly installed.
-$ urbi-launch --version
-# Check that urbi-launch can find its dependencies.
-$ urbi-launch -- --version
-\end{shell}%$
-
-\section{\code{URBI\_PATH}}
-
-The environment variable \code{URBI\_ROOT} is used to locate the \us
-standard files.  You may extend the search path so that your own Urbi
-files can be found easily.  This is the role of the environment
-variable \index{urbi path@\code{URBI\_PATH}}\emphdfn{\code{URBI\_PATH}},
-which contains a list of directory
-names separated by colons.
-
-Note \code{URBI\_PATH} is also designed to be able to \emph{override}
-the default standard files.  Use a lone colon to specify where the
-standard, \code{URBI\_ROOT}-based, search path must be inserted.  See
-the following examples
-
-\begin{shell}
-# Completely override the system path.  First look for files in
-# /home/jessie/urbi, then in /usr/local/urbi.
-export URBI_PATH=/home/jessie/urbi:/usr/local/urbi
-
-# Prepend the previous path to the default path.  This is dangerous as
-# it may result in some standard files being hidden.
-export URBI_PATH=/home/jessie/urbi:/usr/local/urbi:
-
-# First look in Jessie's directory, then the default location, and
-# finally in /usr/local/urbi.
-export URBI_PATH=/home/jessie/urbi::/usr/local/urbi
-
-# Extend the default path, i.e., files that are not found in the
-# default path will be looked for in Jessie's place, and then in
-# /usr/local/urbi
-export URBI_PATH=:/home/jessie/urbi:/usr/local/urbi
-\end{shell}
