doc: Move introduction to the beginning.
	* doc/introduction.tex: New.
	* doc/tutorial/tutorial.tex: Extracted from here.
	* doc/urbi-sdk.tex: Use it.

	* doc/specs/float.tex: Space changes.

--- a/doc/specs/float.tex
+++ b/doc/specs/float.tex
@@ -331,7 +331,8 @@ bit towards the left (\autoref{lst:float-lshift}).
 
 \subsubsection{$-$}
 
-\lstinline|a - b| returns \lstinline|a| minus \lstinline|b| (\autoref{lst:float-minus}).
+\lstinline|a - b| returns \lstinline|a| minus \lstinline|b|
+(\autoref{lst:float-minus}).
 
 \begin{urbiscript}[caption=Float.'-', label=lst:float-minus]
 6 - 3;
@@ -340,7 +341,8 @@ bit towards the left (\autoref{lst:float-lshift}).
 
 \subsubsection{+}
 
-\lstinline|a + b| returns \lstinline|a| plus \lstinline|b| (\autoref{lst:float-plus}).
+\lstinline|a + b| returns \lstinline|a| plus \lstinline|b|
+(\autoref{lst:float-plus}).
 
 \begin{urbiscript}[caption=Float.'+', label=lst:float-plus]
 1 + 1;
