--- a/doc/k1-to-k2.tex
+++ b/doc/k1-to-k2.tex
@@ -109,6 +109,9 @@ simpler, safer, and more consistent method-call-style construct:
 \item \lstinline{new.a(1,2).b(3,4)}
 \end{itemize}
 
+\subsection{stop Foo}
+
+Use \lstinline{Foo.stop} instead.
 
 \section{Cookbook}
 
