--- a/doc/urbi-report.sty
+++ b/doc/urbi-report.sty
@@ -190,7 +190,7 @@
 
 %% \labelObject{ ObjectName }
 %% --------------------------
-%% Define a label for an USL class name.
+%% Define a label for an USL (Urbi Standard Library) class name.
 \newcommand{\labelObject}[1]
   {\label{sec:std-#1}}
 
