--- a/doc/k1-to-k2.tex
+++ b/doc/k1-to-k2.tex
@@ -38,7 +38,7 @@ following table lists common patterns.
 \end{center}
 
 \subsection{delete Foo}
-
+\label{sec:k122:delete}
 In order to maintain an analogy with the \Cxx language, \us used to
 support \lstinline{delete Foo}, but this was removed for a number of
 reasons:
