doc: chapter intros.
	* doc/introduction.tex: Chapter*.
	* doc/tutorial/tutorial.tex: Chapter intros do not need be sections.

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\chapter*{Introduction}
 
 Urbi is a programming language primarily designed for robotics. It's a
 dynamic, prototype-based, object-oriented scripting language. It
