doc: Urbi != UrbiScript.
	* doc/introduction.tex, doc/specs/lang.tex, doc/tutorial/tutorial.tex:
	Use \us instead of \urbi where appropriate.

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -1,6 +1,6 @@
 \chapter*{Introduction}
 
-Urbi is a programming language primarily designed for robotics. It's a
+\us is a programming language primarily designed for robotics. It's a
 dynamic, prototype-based, object-oriented scripting language. It
 supports and emphasizes parallel and event-based programming, which
 are very popular paradigms in robotics, by providing core primitives
@@ -8,26 +8,26 @@ and language constructs.
 
 Its main features are:
 \begin{itemize}
-\item \urbi is designed to be syntactically close to \Cxx. If you know
-  \C or \Cxx, you can easily write \urbi programs.
-\item \urbi is fully integrated with \Cxx. You can bind \Cxx classes
-  in \urbi seamlessly. \urbi is also integrated with many other
+\item \us is designed to be syntactically close to \Cxx. If you know
+  \C or \Cxx, you can easily write \us programs.
+\item \us is fully integrated with \Cxx. You can bind \Cxx classes
+  in \us seamlessly. \us is also integrated with many other
   languages such as \java, \matlab or \python.
-\item \urbi is object oriented. It supports encapsulation, inheritance
+\item \us is object oriented. It supports encapsulation, inheritance
   and inclusion polymorphism. Dynamic dispatching is available through
   monomethods --- just as \Cxx, \Cs or \java.
-\item \urbi includes parallelism at the core of its semantics. It
+\item \us includes parallelism at the core of its semantics. It
   provides you with natural constructs to run and control high numbers
   of interacting concurrent tasks.
-\item \urbi supports event-based programming. Triggering events and
+\item \us supports event-based programming. Triggering events and
   reacting to them is absolutely straightforward.
-\item \urbi supports functional programming, inspired from languages
+\item \us supports functional programming, inspired from languages
   such as \lisp or \caml. This includes first class functions and
   pattern matching.
-\item \urbi uses a client/server architecture: the interpreter accepts
+\item \us uses a client/server architecture: the interpreter accepts
   multiple connections from different sources (human users, robots,
   other servers \ldots) and enables them to interact.
-\item \urbi supports distributed architectures: you can run objects in
+\item \us supports distributed architectures: you can run objects in
   different processes, potentially on another computer across the
   network.
 \end{itemize}
