--- a/doc/tutorial/tutorial.tex
+++ b/doc/tutorial/tutorial.tex
@@ -141,16 +141,16 @@ simpler start anew: shutdown your current server, and spawn a new one.
 
 \chapter{First steps}
 
-This section intends to provide the most basic notions to write \urbi
+This section intends to provide the most basic notions to write \us
 code. Some aspects are presented only superficially. The point of this
-section is to bootstrap yourself with the \urbi language, to be able
+section is to bootstrap yourself with the \us language, to be able
 to study more in-depth examples afterwards.
 
 \section{Comments\index{comment}}
 
 Commenting your code is crucial, so let's start by learning how to do
-this in \urbi. Comments are ignored by the interpreter, and
-can be left as documentation, reminder, \ldots \urbi supports \C and
+this in \us. Comments are ignored by the interpreter, and
+can be left as documentation, reminder, \ldots \us supports \C and
 \Cxx style style comments (\autoref{lst:tut:comments}):
 
 \begin{itemize}
@@ -160,7 +160,7 @@ can be left as documentation, reminder, \ldots \urbi supports \C and
 \end{itemize}
 
 
-\begin{urbiscript}[caption=Comments in \urbi, label=lst:tut:comments]
+\begin{urbiscript}[caption=Comments in \us, label=lst:tut:comments]
 1; // This is a C++ style comment.
 [00000000] 1
 2 + /* This is a C-style comment. */ 2;
@@ -173,7 +173,7 @@ can be left as documentation, reminder, \ldots \urbi supports \C and
 
 \section{Literal values}
 
-As already seen, we can evaluate literal integers. \urbi supports
+As already seen, we can evaluate literal integers. \us supports
 several other literals, such as:
 
 \begin{description}
@@ -202,7 +202,7 @@ void;
 
 Listing \ref{lst:tut:literals} highlights some point:
 \begin{itemize}
-\item Lists in \urbi are heterogeneous. That is, one list can hold
+\item Lists in \us are heterogeneous. That is, one list can hold
   values of different types.
 \item The printing of nil and void is empty.
 \end{itemize}
@@ -222,7 +222,7 @@ max(1, 3, 4, 2);
 \end{urbiscript}
 
 Again, the result of the evaluation are printed out. You can see here
-that function in \urbi can be variadic, that is, take different number
+that function in \us can be variadic, that is, take different number
 of arguments, such as the \lstinline{max} function. Let's now try the
 \lstinline{echo} function, that prints out its argument
 (\autoref{lst:tut:printing}).
@@ -342,11 +342,11 @@ myFunction();
 [00000000] *** from my function!
 \end{urbiscript}
 
-Note the strange output after you defined the function. \urbi seems to
+Note the strange output after you defined the function. \us seems to
 be printing the function you just typed in again. This is because
 a function definition evaluates to the freshly created function.
 
-Since \urbi supports functional programming, function are first class
+Since \us supports functional programming, function are first class
 citizen. Which means they are values, just as \lstinline{0} or
 \lstinline{"foobar"}. So your function definition evaluation yields the
 new function, and as always, the interpreter prints out the evaluation
@@ -415,19 +415,19 @@ succ(50);
 
 \section{Conclusion}
 
-You're now up and running with basic \urbi code, and we can dive in
-details into advanced \urbi code.
+You're now up and running with basic \us code, and we can dive in
+details into advanced \us code.
 
-\chapter{Basic objects, \urbi values model} % FIXME: values model
+\chapter{Basic objects, \us values model} % FIXME: values model
 
-In this section, we focus on urbi values as objects, and study \urbi
+In this section, we focus on urbi values as objects, and study \us
 by-reference values model. We won't study classes and actual objective
 programming yet, these points will be presented in
 \autoref{section:objective}.
 
-\section{Objects in \urbi}
+\section{Objects in \us}
 \label{sec:tut:objects}
-An object in \urbi is a rather simple concept: a list of slots. A \dfn{slot}
+An object in \us is a rather simple concept: a list of slots. A \dfn{slot}
 is a value associated to a name. So an \dfn{object} is a list of slot
 names, each of which indexes a value --- just like a dictionary. You
 can get an object's slot value by using the dot (\lstinline{.}) operator
@@ -436,7 +436,7 @@ names of the slots of an object with the \lstinline{slotNames}
 method. \autoref{lst:tut:object-slots} makes this very clear: we dissect an object
 to point out its structure.
 
-\begin{urbiscript}[caption=Inspecting an \urbi object,label=lst:tut:object-slots]
+\begin{urbiscript}[caption=Inspecting an \us object,label=lst:tut:object-slots]
 // Create a fresh object with two slots.
 class Foo { var a = 42; var b = "foo"; };
 [00000000] Foo
@@ -452,8 +452,8 @@ Foo.b;
 \end{urbiscript}
 
 It's as simple as this. Let's now try to build such an object. First,
-we want a fresh object to work on. In \urbi, \lstinline{Object} is the
-parent type of every object (in fact, since \urbi is prototype-based,
+we want a fresh object to work on. In \us, \lstinline{Object} is the
+parent type of every object (in fact, since \us is prototype-based,
 \lstinline{Object} is the uppermost prototype of every object, but we'll
 talk about prototypes later). An instance of object, is an empty,
 neutral object, so let's start by instanciating one with the
@@ -476,7 +476,7 @@ the \lstinline{slotNames} method.
 Also note how \lstinline{o} is printed out: \lstinline{Object\_}, followed by an
 hexadecimal number. Since this object is empty, its printing is quite
 generic: its type (\lstinline{Object}), and its unique identifier (every
-\urbi object has one). Since these identifiers are often irrelevant
+\us object has one). Since these identifiers are often irrelevant
 and might differ between two executions, they are often filled with
 zeroes in this document.
 
@@ -616,7 +616,7 @@ o.slotNames.sort;
 \end{urbiscript}
 
 Here we are, now you can inspect and modify objects at will. Don't
-hesitate to explore \urbi objects you'll encounter through this
+hesitate to explore \us objects you'll encounter through this
 documentation like this. Last point: reading, updating or removing a
 slot which does not exist is, of course an error
 (\autoref{lst:tut:lookup-failed}).
@@ -631,7 +631,7 @@ o.d = 0;
 
 \section{Methods}
 
-Methods in \urbi are simply object slots containing functions. We made
+Methods in \us are simply object slots containing functions. We made
 a little simplification earlier by saying that \lstinline|obj.slot| is
 equivalent to \lstinline|obj.getSlot("slot")|: if the fetched value is
 executable code such as a function, the dot form evaluates it, as
@@ -704,13 +704,13 @@ with the equality operator! Let's try getSloting another method in
 
 So strings' \lstinline{size} method is another type of object, a
 \lstinline{Primitive}. These object are executable, just like function,
-but they are actually primitives implemented in \Cxx, not \urbi. You
+but they are actually primitives implemented in \Cxx, not \us. You
 have thus no means to see their inner code.
 
 \section{Everything is an object}
 
 If you're wondering what is an object and what isn't, the answer is
-simple: every single bit of value you manipulate in \urbi is an
+simple: every single bit of value you manipulate in \us is an
 object, including primitive types, types themselves, functions, \ldots
 \autoref{lst:tut:everything-object} illustrates this.
 
@@ -737,9 +737,9 @@ x;
 % (right? right?).
 As you can see, integers are objects just like any other value.
 
-\section{The \urbi values model}
+\section{The \us values model}
 
-We are now going to focus on the \urbi value model. That is, how
+We are now going to focus on the \us value model. That is, how
 values are stored and passed around. The whole point is to understand
 when variables are the same. For this, we are going to introduce a new
 method, \lstinline{uid}. This method returns the target's unique
@@ -789,7 +789,7 @@ us that they are not the same object, that they are two different
 instances of integers, even if they both equal 42.
 
 Thanks to this operator, we can point out the fact that slots and
-local variables in \urbi have a reference semantic. That is, when you
+local variables in \us have a reference semantic. That is, when you
 defining a local variable or a slot, you're not copying any value (as
 you would be in \C or \Cxx), you're only making it refer to an already
 existing value (as you would in \ruby or \java). See \autoref{lst:tut:ref-to-same}
@@ -1145,7 +1145,7 @@ function max3(a, b, c) // Max of three values
 \section{Lexical closures}
 
 A closure are the capture by a function of a variable external to this
-function. \urbi supports lexical closure: functions can refer to outer
+function. \us supports lexical closure: functions can refer to outer
 local variables, as long as they are visible from the point of
 declaration of the function \autoref{lst:tut:read-closure}.
 
@@ -1201,16 +1201,16 @@ described in \autoref{section:functional}.
 
 %\section{Conclusion}
 
-\chapter{Objective programming, \urbi object model}
+\chapter{Objective programming, \us object model}
 \label{section:objective}
 
 % FIXME: this section content will soon become mostly crap
 
 We are now at the point you waited for: object programing. We will
-here study the prototype-based object model of \urbi, and how to
+here study the prototype-based object model of \us, and how to
 define and use classes.
 
-\section{Prototype-based programing in \urbi}
+\section{Prototype-based programing in \us}
 
 You're probably already familiar with class-based object programing,
 since this is the \Cxx model. Prototype-based object programing is
@@ -1221,11 +1221,11 @@ programming was introduced by the Self language, and is used in
 several popular script languages such as \io or \js.
 
 Consider pairs for instance. Pairs are objects that hold two values,
-first and second, like an \lstinline{std$::$pair} in \Cxx. Since \urbi is
+first and second, like an \lstinline{std$::$pair} in \Cxx. Since \us is
 prototype-based, there is no pair class. Instead, \lstinline|Pair| is
 really a pair (\autoref{lst:tut:proto}).
 
-\begin{urbiscript}[caption=Prototypes in \urbi, label=lst:tut:proto]
+\begin{urbiscript}[caption=Prototypes in \us, label=lst:tut:proto]
 Pair;
 [00000000] (nil, nil)
 \end{urbiscript}
@@ -1322,7 +1322,7 @@ As shown here, the \lstinline{clone} method simply creates an empty
 object, with its target as prototype. The new object has the exact
 same behavior as the cloned on thanks to slot lookup.
 
-Let's experience slot lookup by ourselves. In \urbi, you can add and
+Let's experience slot lookup by ourselves. In \us, you can add and
 remove prototypes from an object thanks to \lstinline{addProto} and
 \lstinline{removeProto}.
 
@@ -1350,7 +1350,7 @@ c.slot;
 [00000000:error] !!! lookup failed: slot
 \end{urbiscript}
 
-The slot lookup algorithm in \urbi in a depth-first traversal of the
+The slot lookup algorithm in \us in a depth-first traversal of the
 object prototypes tree. Formally, when the "s" slot is requested from
 x:
 
@@ -1509,7 +1509,7 @@ MyPair;
 [00000000] MyPair: nil, nil
 \end{urbiscript}
 
-That's it, we defined a pair that can be cloned at will! \urbi
+That's it, we defined a pair that can be cloned at will! \us
 provides a shorthand to define classes as we did above: the
 \lstinline{class} keyword (\autoref{lst:tut:class}).
 
@@ -1571,12 +1571,12 @@ MyPair.new(0, 1);
 \chapter{Functional programming}
 \label{section:functional}
 
-\urbi support functional programming through first class functions and
+\us support functional programming through first class functions and
 lambda expressions.
 
 \section{First class functions}
 
-\urbi has first class functions. That is, function are regular values,
+\us has first class functions. That is, function are regular values,
 just like an integer or a string, enabling you to store them or pass
 them as arguments. For instance, you don't need to write
 \lstinline|function object.f(){/* ... */}| to insert a function in an
@@ -1655,7 +1655,7 @@ var obj.f = function (/*...*/) {/* ... */};
 Most popular programming languages use strict arguments evaluation:
 arguments are evaluated before functions are called. Other languages
 use lazy evaluation: argument are evaluated by the function only when
-needed. In \urbi, evaluation is strict by default, but you can ask a
+needed. In \us, evaluation is strict by default, but you can ask a
 function not to evaluate its arguments, and do it by hand. This works
 by not specifying formal arguments. The function is provided with a
 \lstinline{call} object that enables you to evaluate arguments
@@ -1686,7 +1686,7 @@ language, it uses a few logic operators. For instance, the logical and
 (\lstinline{\&\&}) does not evaluate its right operand if the left
 operand is false (the result will be false anyway).
 
-\urbi logic operator mimic this behavior. \autoref{lst:tut:short-circuits} shows
+\us logic operator mimic this behavior. \autoref{lst:tut:short-circuits} shows
 how one can implement such a behavior.
 
 \begin{urbiscript}[caption=Implementing logic short circuits,
@@ -1715,7 +1715,7 @@ myand(true, f());
 
 \chapter{Parallelism, concurrent flows control}
 
-Parallelism is one of the major features of \urbi. So far, all we've
+Parallelism is one of the major features of \us. So far, all we've
 seen already existed in other language - although we tried to pick,
 mix and adapt features and paradigm to create a nice scripting
 language. Parallelism is one of the corner stone of its paradigm, and
@@ -1725,7 +1725,7 @@ agents, such as robotics or \ai.
 \section{Parralelism operators}
 
 For now, we've separated our different commands with a semicolon
-(\lstinline{;}). There are actually other separators in \urbi:
+(\lstinline{;}). There are actually other separators in \us:
 
 \begin{itemize}
 \item ``\lstinline{;}'': Serialization operator. Wait for the left
@@ -2030,7 +2030,7 @@ timeOut({sleep(2s); echo("On time"); 42}, 1s);
 
 When dealing with highly interactive agent programming, sequential
 programming is inconvenient. We want to react to external, random
-events, not execute code linearly with a predefined flow. \urbi has a
+events, not execute code linearly with a predefined flow. \us has a
 strong support for event-based programming.
 
 \section{Event related constructs}
@@ -2144,7 +2144,7 @@ sleep (2s);
 
 \section{Events}
 
-\urbi enables you to define events, that can be caught with the
+\us enables you to define events, that can be caught with the
 \lstinline|at| and \lstinline|whenever| constructs we saw earlier. You
 can create events by cloning the \lstinline|Event| prototype. They can
 then be emitted with the \lstinline|!| keyword (\autoref{lst:tut:event}).
@@ -2188,7 +2188,7 @@ myEvent! ~ 350ms;
 %\section{Valued events}
 
 
-%\chapter{Standard \urbi library}
+%\chapter{Standard \us library}
 
 %\section{Printing}
 
