--- a/doc/specs/stdlib.tex
+++ b/doc/specs/stdlib.tex
@@ -16,7 +16,8 @@
 \section{Channel}
 \section{Code}
 \section{Comparable}
-\section{Dictionary}
+
+\input{specs/dictionary}
 
 \section{Event}
 
@@ -25,8 +26,6 @@
 \section{Group}
 
 \section{Lazy}
-
-\subsection{Rationale}
 
 \dfn{Lazies} are objects that hold a lazy value, that is, a not yet evaluated
 value. They provide facilities to evaluate their content only once
@@ -140,6 +139,7 @@ and call messages. See example with call messages in
 \label{sec:std-object-updateslot}
 
 \section{Orderable}
+\section{Pair}
 \section{Pattern}
 \section{Primitive}
 \section{String}
